# youtube2datasets

./: .gitignore  README.md  pyproject.toml
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
src/youtube2datasets/: __init__.py  __main__.py  cli.py  dataset.py  downloader.py  hf.py  media.py  models.py  timecode.py
tests/: test_media.py  test_playlist.py  test_prepare_local.py  test_timecode.py
